# btc-arb

./: CHANGES.md  Cargo.toml  README.md  config.toml  trades.csv
src/: config.rs  feishu.rs  logger.rs  main.rs  monitor.rs  orderbook.rs  strategy.rs
src/binance/: models.rs  rest.rs  ws.rs
